[SANTUARIO-187] - Rename org.jcp package in the 1.5 release
git-svn-id: https://svn.apache.org/repos/asf/santuario/xml-security-java/trunk@1197150 13f79535-47bb-0310-9956-ffa450edef68